# videowind

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  webui.sh
src/: api.py  asgi.py  init.py  main.py  router.py  streamlit.py
src/clip_services/: clip_base.py  pexels_service.py  pixabay_service.py
src/config/: __init__.py  config.py
src/constants/: config.py  consts.py  enums.py  errors.py
src/controllers/: base.py  exception_handlers.py  ping_router.py
src/controllers/manager/: memory_manager.py  redis_manager.py
src/controllers/v1/: download_router.py  llm_router.py  music_router.py  task_router.py  tts_router.py  video.py  video_router.py  voice_router.py
src/crud/: task_crud.py
src/db/: connection.py  dao.py  models.py
src/models/: const.py  schema.py
src/services/: llm.py  material.py  queue_service.py  state.py  subtitle.py  task.py  task_service.py  video.py  video_service.py  voice.py  voice_service.py
src/utils/: ai_video_generator.py  date_utils.py  env_utils.py  file_utils.py  subtitle_utils.py  utils.py  wp_utils.py
src/worker/: task_worker.py
streamlit/: Main.py
tests/: __init__.py
tests/clip_services/: test_pexels_service.py  test_pixabay_service.py
tests/files/jsons/: pexels-search-item.json  pixabay-search-item.json
tests/files/subtitles/: subtitle-22s.srt  subtitle-6s.srt  subtitle-9s.srt
tests/services/: test_video_service.py
tests/utils/: test_subtitle_utils.py  test_video_clip_utils.py
