[project]
name = "videowind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-cognitiveservices-speech==1.41.1",
    "cryptography==44.0.2",
    "dashscope==1.20.14",
    "edge-tts==6.1.19",
    "fastapi==0.115.6",
    "fastapi-pagination==0.12.34",
    "faster-whisper==1.1.1",
    "g4f==0.3.8.1",
    "google-generativeai==0.8.4",
    "jinja2==3.1.6",
    "loguru==0.7.2",
    "moviepy==2.1.1",
    "onnxruntime==1.21.1",
    "openai==1.56.1",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.10.6",
    "python-dotenv>=1.1.0",
    "python-multipart==0.0.19",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "requests>=2.32.3",
    "sqlalchemy==2.0.39",
    "streamlit==1.43.1",
    "streamlit-authenticator==0.4.1",
    "uuid6>=2024.7.10",
    "uvicorn==0.32.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
